--- a/dragNdrop/package.json
+++ b/dragNdrop/package.json
@@ -1,9 +1,16 @@
 {
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "lite-server"
+    "start": "webpack serve",
+    "build": "webpack --config webpack.config.prod.js "
   },
   "devDependencies": {
-    "typescript": "^4.2.4"
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
+    "lite-server": "^2.6.1",
+    "ts-loader": "^9.2.2",
+    "typescript": "^4.3.2",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
